# cppbox

./: CMakeLists.txt
src/: main.cpp
src/config/: config.cpp  config.hpp
src/core/: log.cpp  log.hpp  net.hpp  session.hpp  utils.hpp
src/inbound/: http_inbound.cpp  http_inbound.hpp  inbound.hpp  mixed_inbound.cpp  mixed_inbound.hpp  socks5_inbound.cpp  socks5_inbound.hpp
src/outbound/: block_outbound.cpp  block_outbound.hpp  direct_outbound.cpp  direct_outbound.hpp  outbound.hpp  vless_outbound.cpp  vless_outbound.hpp  vless_ws_outbound.cpp  vless_ws_outbound.hpp
src/platform/: windows_proxy.cpp  windows_proxy.hpp
src/protocol/: http_proxy.cpp  http_proxy.hpp  socks5.cpp  socks5.hpp  vless.cpp  vless.hpp
src/route/: router.cpp  router.hpp  rule_set.cpp  rule_set.hpp
src/transport/: stream.hpp  tcp_client.cpp  tcp_client.hpp  ws_client.cpp  ws_client.hpp
